# replicate-runner

./: .gitignore  CLAUDE.md  FLUX_LORA_EXAMPLE.md  Makefile  README.md  pyproject.toml  replicate-runner.spec
docs/: profile_prompt_wizard_spec.md
replicate_runner/: CLAUDE.md  config_loader.py  logger_config.py  lora_catalog.py  main.py  persona.py  profile_runtime.py  profiles.py  prompt_engine.py
replicate_runner/commands/: __init__.py  explore_cmds.py  hf_cmds.py  profile_cmds.py  prompt_cmds.py  replicate_cmds.py
replicate_runner/config/: loras.yaml  persona_actions.yaml  profiles.yaml
tests/: test_profiles.py
